--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --coverage --watchAll",
     "eject": "react-scripts eject",
     "lint": "eslint .",
     "storybook": "start-storybook -p 6006 -s public",
@@ -100,6 +100,13 @@
   "lint-staged": {
     "**/*.{ts,tsx}": [
       "npm run lint"
+    ]
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{ts,tsx}",
+      "!src/index.tsx",
+      "!src/**/*.{stories.ts,stories.tsx}"
     ]
   }
 }
